XSensor/Peloton-20220817/Peloton-20220817/XSCore90.h

// 8 bits
//typedef uint8_t XBOOL;
typedef bool XBOOL;
enum XBOOL_VALUES
{
	xFALSE = false,
	xTRUE = true
};
// 64 bits
typedef uint64_t SENSORPID;
#define NULL nullptr
enum EPressureUnit
{
	ePRESUNIT_MMHG = 0,	// millimeters of mercury
	ePRESUNIT_INH2O,	// inches of water
	ePRESUNIT_PSI,		// pounds/sq.inch
	ePRESUNIT_KPA,		// kilopascals
	ePRESUNIT_KGCM2,	// kgf/cm^2
	ePRESUNIT_ATM,		// atmospheres
	ePRESUNIT_NCM2,		// newtons/cm^2
	ePRESUNIT_MBAR,		// millibars
	ePRESUNIT_NM2,		// Newton/meter^2
	ePRESUNIT_GCM2,		// grams/cm^2
	ePRESUNIT_BAR,		// bar

	ePRESUNIT_RAW = 255
};
// Fetch the display name of the sensor. Example: HX210.11.31.M9-LF S0002
//
// The string is made of 16 bit wchar_t characters (UTF-16/UCS-2) which is null terminated.
//
// If pBuffer is 0, the length of the required buffer (in wchar_t character counts) is returned in bufferSize. 
// This count includes space for a null terminator character.  (Byte size of the buffer should be at least 2 x charCount).
// If pBuffer is valid, then charCount is expected to be the number of wchar_t that pBuffer can hold (including the zero terminator).
// Returns xTRUE if the call succeeds.


extern "C" XSCORE_API XBOOL XS_GetSenselDims(SENSORPID spid, float& nWidthCM, float& nHeightCM);
// Retrieves the SENSORPID associated with the calibration file.
// szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc
// Returns xTRUE if the call succeeds.


// ===========================================================================
//	Sensor Configuration - AUTOMATIC
//
//	These functions simplify the process of configuring any connected sensors.
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_AutoConfigByDefault();
extern "C" XSCORE_API XBOOL XS_AutoConfig_SingleSensorUTF8(const char* szCalFile = NULL);
extern "C" XSCORE_API XBOOL XS_AutoConfig_SingleSensorXSN(const wchar_t* szXSNFile, const wchar_t* szCalFile = NULL);
extern "C" XSCORE_API XBOOL XS_AutoConfig_SingleSensorXSNUTF8(const char* szXSNFile, const char* szCalFile = NULL);
// These XS_AutoConfig variants allow manual selection of the calibration file. 
// This only works if there is a single sensor present.


// ===========================================================================
//	Sensor Configuration - MANUAL
//
//	These functions give better control over the configuration of any connected
//	sensors.
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_NewSensorConfig();
// Prepares the library for creating a configuration of sensors. Remove any existing sensor configuration.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_NewSensorConfigXSN(const wchar_t* szXSNFile);
extern "C" XSCORE_API XBOOL XS_NewSensorConfigXSNUTF8(const char* szXSNFile);
// Similar to XS_NewSensorConfig(), but also creates a standalone XSN session file.
// The szXSNFile file path must be fully specified. eg: "c:\MySessions\Test.xsn".
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_AddSensorToConfig(SENSORPID spid, const wchar_t* szCalibrationFile);
extern "C" XSCORE_API XBOOL XS_AddSensorToConfigUTF8(SENSORPID spid, const char* szCalibrationFile);
// Adds a sensor to the sensor configuration.
// The full path to the sensor's calibration file should be specified in szCalibrationFile.
// If szCalibrationFile is 0, then only raw data is collected.
//
// Returns xTRUE if the call succeeds.
//
// NOTE: All sensors in the configuration must have calibration files, otherwise only raw values are collected.

extern "C" XSCORE_API XBOOL XS_AddSensorToConfig_AutoCal(SENSORPID spid, uint8_t pressureUnits = ePRESUNIT_MMHG, float nTargetMaxPressure = -1.0f);
// Adds a sensor to the sensor configuration. Will download any calibration files from the sensor if they are not present.
// Attempts to use the nearest matching calibration pressure range.
// Returns xTRUE if the call succeeds.
//
// NOTE: The calibration download process can be slow. Be sure to set a folder 
//       for caching the calibration files using XS_SetCalibrationFolder().

extern "C" XSCORE_API XBOOL XS_AddSensorToConfig_AutoCalByDefault(SENSORPID spid);
// Similar to XS_AddSensorToConfig_AutoCal(), but attempts to use the default pressure range for the sensor.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_ConfigComplete();
// When finished adding sensors to the configuration, call this function to initialize the configuration for use.
// This function must be called before calling XS_OpenConnection.
// Returns xTRUE if the call succeeds.

// ===========================================================================
// ===========================================================================
//	Sensor Configuration
// ===========================================================================
// ===========================================================================

extern "C" XSCORE_API void XS_SetPressureUnit(uint8_t PressureUnit);
// Sets the calibrated data's pressure units (see enum EPressureUnits). Pressure readings are presented in these units. 
// These can be changed at any time.

extern "C" XSCORE_API uint8_t XS_GetPressureUnit();
// Returns the current pressure units (see enum EPressureUnits).

extern "C" XSCORE_API XBOOL XS_HasConfig();
// Returns xTRUE if the DLL has a sensor configuration.

extern "C" XSCORE_API XBOOL XS_ReleaseConfig();
// Closes any open connection and releases the configuration (including any XSN file).
// Subsequent calls to XS_OpenConnection will fail until a new config is created.
// Call this before attempting any 

// ===========================================================================
//	Sensor Configuration - details
// ===========================================================================

extern "C" XSCORE_API SENSORPID XS_ConfigSensorPID(uint32_t nConfigIndex);
// Returns the sensor PRODUCT ID at the indexed location of the configured sensors list. The index is zero based.
// If 0 is returned, check XS_GetLastErrorCode.

extern "C" XSCORE_API uint32_t XS_ConfigSensorCount();
// Returns the number of configured sensors.

extern "C" XSCORE_API XBOOL XS_IsCalibrationConfigured();
// Returns xTRUE if the configuration is setup for calibrated data.

extern "C" XSCORE_API XBOOL XS_GetConfigInfo(uint8_t pressureUnits, float& nMinPressure, float& nMaxPressure);
// After configuration is complete, call this to check the pressure range of the configuration.
// 
// pressureUnits - the returned minimum and maximum pressures are returned in these units. (See enum EPressureUnits).
// 
// When operating in RAW mode (i.e.: no calibration file specified), pressureUnits is ignored.
// Returns xTRUE if the call succeeds.


// ===========================================================================
//	Sampling State
//
// These functions affect the sampling behavior of the DLL.
// These settings should only be modified before opening a connection.
// ===========================================================================

extern "C" XSCORE_API void XS_SetReadTimeout(uint32_t TimeoutSeconds);
// Sets the XS_Sample function's timeout period in seconds.
//
// If the software loses connection to a sensor, it tries to re-open the connection
// for this length of time.

extern "C" XSCORE_API uint32_t XS_GetReadTimeout();
// Returns the XS_Sample timeout period in seconds.


extern "C" XSCORE_API void XS_SetOverlapMode(XBOOL bOverlap);
// This mode causes the DLL to sample each configured sensor in sequence (versus in parallel).
//
// This mode prevents electrical crosstalk between sensors when they are physically in contact.
// 
// NOTE: This mode is not available when X4 sensors are configured.

extern "C" XSCORE_API XBOOL XS_GetOverlapMode();
// returns xTRUE when Overlap mode is on.  Overlap mode is off by default.

extern "C" XSCORE_API void XS_SetAllowWireless(XBOOL bAllow);
extern "C" XSCORE_API XBOOL XS_GetAllowWireless();
// A flag that allows use of the X3 wireless series.

extern "C" XSCORE_API void XS_SetAllowX4(XBOOL bAllow);
extern "C" XSCORE_API XBOOL XS_GetAllowX4();
// A flag that allows use of the X4 sensor series (wired).

extern "C" XSCORE_API void XS_SetAllowX4Wireless(XBOOL bAllow);
extern "C" XSCORE_API XBOOL XS_GetAllowX4Wireless();
// A flag that allows use of the X4 sensor series (wireless - must already be paired in the OS).

// NOTE: There is no flag for X3 wired sensors. These are always enumerated.


extern "C" XSCORE_API void XS_SetX4Mode8Bit(XBOOL bEnable8BitMode);
extern "C" XSCORE_API XBOOL XS_GetX4Mode8Bit();
// A flag that puts the X4 in 8-bit mode.
// - This can improve the reliability of Bluetooth transmission speeds. It has no impact on actual recording speed.

extern "C" XSCORE_API XBOOL XS_HasHardwareIMU(SENSORPID spid);
// determines if the sensor has IMU capability

extern "C" XSCORE_API void XS_SetEnableIMU(XBOOL bEnable);
// Enables/disables IMU collection for supported sensors.

extern "C" XSCORE_API XBOOL XS_GetEnableIMU();
// Get the number of per-sensel readings that are averaged together per sensel scan.


// ===========================================================================
//	Connection Management
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_OpenConnection(uint32_t nThreadedFramesPerMinute=0);
// Returns the threshold below which pressure is zeroed.
// If -1.0 is returned, this indicates the function failed. Check XS_GetLastErrorCode.

extern "C" XSCORE_API XBOOL XS_Sample();