XSensor/ToS/XSCore90.py


# XS_AutoConfig_SingleSensorUTF8
# Wraps all of the enumeration and configuration into a single call.
# Optionally provide a path to a calibration file to override any calibration downloads.
# ie: XS_AutoConfig_SingleSensorUTF8(L"d:\\MyCalFiles\\PX100363605_20121022_1151.xsc");
# This only works if there is a single sensor present.
# XBOOL XS_AutoConfig_SingleSensorUTF8(const char* szCalFile=NULL);
XS_AutoConfig_SingleSensorUTF8 = libXSC.XS_AutoConfig_SingleSensorUTF8
XS_AutoConfig_SingleSensorUTF8.argtypes = [ctypes.c_char_p]
XS_AutoConfig_SingleSensorUTF8.restype = ctypes.c_ubyte

# XBOOL XS_AutoConfig_SingleSensorXSN(const wchar_t* szXSNFile, const wchar_t* szCalFile=NULL);
XS_AutoConfig_SingleSensorXSN = libXSC.XS_AutoConfig_SingleSensorXSN
XS_AutoConfig_SingleSensorXSN.argtypes = [ctypes.c_wchar_p, ctypes.c_wchar_p]
XS_AutoConfig_SingleSensorXSN.restype = ctypes.c_ubyte

# XBOOL XS_AutoConfig_SingleSensorXSNUTF8(const wchar_t* szXSNFile, const char* szCalFile=NULL);
XS_AutoConfig_SingleSensorXSNUTF8 = libXSC.XS_AutoConfig_SingleSensorXSNUTF8
XS_AutoConfig_SingleSensorXSNUTF8.argtypes = [ctypes.c_wchar_p, ctypes.c_char_p]
XS_AutoConfig_SingleSensorXSNUTF8.restype = ctypes.c_ubyte

# ===========================================================================
#	MANUAL Sensor Configuration
#
#	These functions give better control over the configuration of any connected
#	sensors.
# ===========================================================================

# XS_NewSensorConfig
# Prepares the DLL to create a configuration of sensors.  Remove any existing configured sensors.
# XBOOL XS_NewSensorConfig();
XS_NewSensorConfig = libXSC.XS_NewSensorConfig
XS_NewSensorConfig.restype = ctypes.c_ubyte

# XS_NewSensorConfigXSN
# Similar to XS_NewSensorConfig(), but also creates a standalone XSN session file.
# The szXSNFile path and file name must be fully specified. eg: "c:\MySessions\Test.xsn".
# XBOOL XS_NewSensorConfigXSN(const wchar_t* szXSNFile);
XS_NewSensorConfigXSN = libXSC.XS_NewSensorConfigXSN
XS_NewSensorConfigXSN.argtypes = [ctypes.c_wchar_p]
XS_NewSensorConfigXSN.restype = ctypes.c_ubyte

# XS_NewSensorConfigXSNUTF8
# Similar to XS_NewSensorConfig(), but also creates a standalone XSN session file.
# The szXSNFile path and file name must be fully specified. eg: "c:\MySessions\Test.xsn".
# XBOOL XS_NewSensorConfigXSNUTF8(const char* szXSNFile);
XS_NewSensorConfigXSNUTF8 = libXSC.XS_NewSensorConfigXSNUTF8
XS_NewSensorConfigXSNUTF8.argtypes = [ctypes.c_char_p]
XS_NewSensorConfigXSNUTF8.restype = ctypes.c_ubyte

# XS_AddSensorToConfig
# Adds a sensor to the sensor configuration.  Sensors in the configuration are sampled when XS_Sample() is called.
# A calibration file can be specified here.  If szCalibrationFile is 0, then only raw data is collected.
# All sensors in the configuration must have calibration files, otherwise only raw values are collected.
# XBOOL XS_AddSensorToConfig(SENSORPID spid, const wchar_t* szCalibrationFile);
XS_AddSensorToConfig = libXSC.XS_AddSensorToConfig
XS_AddSensorToConfig.argtypes = [ctypes.c_ulonglong, ctypes.c_wchar_p]
XS_AddSensorToConfig.restype = ctypes.c_ubyte

# XS_AddSensorToConfigUTF8
# Adds a sensor to the sensor configuration.  Sensors in the configuration are sampled when XS_Sample() is called.
# A calibration file can be specified here.  If szCalibrationFile is 0, then only raw data is collected.
# All sensors in the configuration must have calibration files, otherwise only raw values are collected.
# XBOOL XS_AddSensorToConfigUTF8(SENSORPID spid, const char* szCalibrationFile);
XS_AddSensorToConfigUTF8 = libXSC.XS_AddSensorToConfigUTF8
XS_AddSensorToConfigUTF8.argtypes = [ctypes.c_ulonglong, ctypes.c_char_p]
XS_AddSensorToConfigUTF8.restype = ctypes.c_ubyte


# XS_AddSensorToConfig_AutoCalByDefault
# Adds a sensor to the sensor configuration.  Sensors in the configuration are sampled when XS_Sample() is called.
# Attempts to download a calibration file from the sensor and use it.
# If nPressureUnits is raw, then it uses the first calibration file it finds, otherwise it attempts to match the desired maximum pressure
# Note: Downloading can be a bit slow.
# XBOOL XS_AddSensorToConfig_AutoCalByDefault(SENSORPID spid);
XS_AddSensorToConfig_AutoCalByDefault = libXSC.XS_AddSensorToConfig_AutoCalByDefault
XS_AddSensorToConfig_AutoCalByDefault.argtypes = [ctypes.c_ulonglong]
XS_AddSensorToConfig_AutoCalByDefault.restype = ctypes.c_ubyte

# XS_AddSensorToConfig_AutoCal
# see XS_AddSensorToConfig_AutoCalByDefault
# XBOOL XS_AddSensorToConfig_AutoCal(SENSORPID spid, uint8_t nPressureUnits = ePRESUNIT_MMHG, float nTargetMaxPressure = -1.0f);
XS_AddSensorToConfig_AutoCal = libXSC.XS_AddSensorToConfig_AutoCal
XS_AddSensorToConfig_AutoCal.argtypes = [ctypes.c_ulonglong, ctypes.c_ubyte, ctypes.c_float]
XS_AddSensorToConfig_AutoCal.restype = ctypes.c_ubyte

# XS_ConfigComplete
# When finished adding sensors to the configuration, call this function to initialize it and prepare for calling XS_OpenConnection()
# XBOOL XS_ConfigComplete();
XS_ConfigComplete = libXSC.XS_ConfigComplete
XS_ConfigComplete.restype = ctypes.c_ubyte

# XS_HasConfig
# Returns xTRUE if the DLL has a sensor configuration
# XBOOL XS_HasConfig();
XS_HasConfig = libXSC.XS_HasConfig
XS_HasConfig.restype = ctypes.c_ubyte


# XS_ReleaseConfig
# Closes any open connection and releases the configuration (including any XSN file).
# Subsequent calls to XS_OpenConnection will fail until a new config is created.
# XBOOL XS_ReleaseConfig();
XS_ReleaseConfig = libXSC.XS_ReleaseConfig
XS_ReleaseConfig.restype = ctypes.c_ubyte


# ===========================================================================
#	Sensor Configuration Information
# ===========================================================================

# XS_ConfigSensorPID
# Returns the sensor PRODUCT ID at the indexed location of the configured sensors list.  The index is zero based.
# Call XS_NewSensorConfig+XS_AddSensorToConfig+XS_ConfigComplete or XS_AutoConfigByDefault() before calling this function.
# SENSORPID XS_ConfigSensorPID(uint32_t nConfigIndex);
XS_ConfigSensorPID = libXSC.XS_ConfigSensorPID
XS_ConfigSensorPID.argtypes = [ctypes.c_uint]
XS_ConfigSensorPID.restype = ctypes.c_ulonglong


# XS_ConfigSensorCount
# returns the number of configured sensors
# uint32_t XS_ConfigSensorCount();
XS_ConfigSensorCount = libXSC.XS_ConfigSensorCount
XS_ConfigSensorCount.restype = ctypes.c_uint


# XS_IsCalibrationConfigured
# Returns 1 if the configuration is setup for calibrated data.
# XBOOL XS_IsCalibrationConfigured();
XS_IsCalibrationConfigured = libXSC.XS_IsCalibrationConfigured
XS_IsCalibrationConfigured.restype = ctypes.c_ubyte


# XS_GetConfigInfo
# After the configuration is complete, call this to check the pressure range of the sensor.
# nPressureUnits - the pressure units in which the minimum and maximum pressures are returned. (See EPressureUnits below)
# If operating in RAW mode (i.e.: no calibration file specified), then nPressureUnits is ignored.
# XBOOL XS_GetConfigInfo(uint8_t nPressureUnits, float& nMinPressure, float& nMaxPressure);
XS_GetConfigInfo = libXSC.XS_GetConfigInfo
XS_GetConfigInfo.argtypes = [ctypes.c_ubyte, ctypes.c_void_p, ctypes.c_void_p]
XS_GetConfigInfo.restype = ctypes.c_ubyte


# XS_GetSenselDims
# returns a single sensel's physical dimensions in centimetres. Note this only works once a sensor configuration is via XS_AutoConfigByDefault or XS_ConfigComplete
# XBOOL XS_GetSenselDims(SENSORPID spid, float& nWidthCM, float& nHeightCM);
XS_GetSenselDims = libXSC.XS_GetSenselDims
XS_GetSenselDims.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p, ctypes.c_void_p]
XS_GetSenselDims.restype = ctypes.c_ubyte


# ===========================================================================
#	Other Settings
# ===========================================================================

# XS_SetPressureUnit
# Sets the calibrated data's pressure units.  This can be changed at any time.
# Pass in a value of type EPressureUnit
# void XS_SetPressureUnit(uint8_t PressureUnit);
XS_SetPressureUnit = libXSC.XS_SetPressureUnit
XS_SetPressureUnit.argtypes = [ctypes.c_ubyte]
# has no return value XS_SetPressureUnit.restype = ctypes.c_ubyte


# XS_GetPressureUnit
# Returns the current pressure units (see EPressureUnits).
# uint8_t XS_GetPressureUnit();
XS_GetPressureUnit = libXSC.XS_GetPressureUnit
XS_GetPressureUnit.restype = ctypes.c_ubyte


# XS_SetReadTimeout
# Sets the sample function's timeout period (in seconds).
# 5 seconds is default
# void XS_SetReadTimeout(uint32_t TimeoutSeconds);
XS_SetReadTimeout = libXSC.XS_SetReadTimeout
XS_SetReadTimeout.argtypes = [ctypes.c_uint]
# has no return value XS_SetReadTimeout.restype = ctypes.c_ubyte


# XS_GetReadTimeout
# returns the sample timeout period in seconds
# uint32_t XS_GetReadTimeout();
XS_GetReadTimeout = libXSC.XS_GetReadTimeout
XS_GetReadTimeout.restype = ctypes.c_uint


# XS_SetOverlapMode
# if the sensors are physically overlapped, ensure this mode is on to avoid image distortion
# void XS_SetOverlapMode(XBOOL bOverlap);
XS_SetOverlapMode = libXSC.XS_SetOverlapMode
XS_SetOverlapMode.argtypes = [ctypes.c_ubyte]
# has no return value XS_SetOverlapMode.restype = ctypes.c_ubyte

# XS_GetOverlapMode
# returns true (non-zero) if overlap mode is on, false otherwise.  This is on by default.
# XBOOL XS_GetOverlapMode();
XS_GetOverlapMode = libXSC.XS_GetOverlapMode
XS_GetOverlapMode.restype = ctypes.c_ubyte


# XS_SetAllowWireless
# allows use of the X3 wireless series
XS_SetAllowWireless = libXSC.XS_SetAllowWireless
XS_SetAllowWireless.argtypes = [ctypes.c_ubyte]
# has no return value

# XS_GetAllowWireless
# returns 1 if the DLL is allowed to scan for X3 wireless sensors, or 0 otherwise
XS_GetAllowWireless = libXSC.XS_GetAllowWireless
XS_GetAllowWireless.restype = ctypes.c_ubyte


# XS_SetAllowX4
# allow the DLL to find X4 sensors that are connected by USB
XS_SetAllowX4 = libXSC.XS_SetAllowX4
XS_SetAllowX4.argtypes = [ctypes.c_ubyte]
# has no return value

# XS_GetAllowX4
# returns 1 if the DLL is allowed to scan for X4 wired sensors, or 0 otherwise
XS_GetAllowX4 = libXSC.XS_GetAllowX4
XS_GetAllowX4.restype = ctypes.c_ubyte


# XS_SetAllowX4Wireless
# allow the DLL to find X4 sensors that are connected by Bluetooth
XS_SetAllowX4Wireless = libXSC.XS_SetAllowX4Wireless
XS_SetAllowX4Wireless.argtypes = [ctypes.c_ubyte]
# has no return value

# XS_GetAllowX4Wireless
# returns 1 if the DLL is allowed to scan for X4 Bluetooth sensors, or 0 otherwise
XS_GetAllowX4Wireless = libXSC.XS_GetAllowX4Wireless
XS_GetAllowX4Wireless.restype = ctypes.c_ubyte


# XS_SetX4Mode8Bit
# Place the X4 in 8 bit mode - This can improve the reliability of Bluetooth transmission speeds. Has no impact on actual recording speed.
# Pass in 1 to enable 8 bit mode, 0 to restore the normal 16 bit mode
XS_SetX4Mode8Bit = libXSC.XS_SetX4Mode8Bit
XS_SetX4Mode8Bit.argtypes = [ctypes.c_ubyte]
# has no return value

# XS_GetX4Mode8Bit
# returns 1 if X4 8 bit mode is enabled, 0 if 16 bit is enabled
XS_GetX4Mode8Bit = libXSC.XS_GetX4Mode8Bit
XS_GetX4Mode8Bit.restype = ctypes.c_ubyte

# XS_HasHardwareIMU
# returns 1 if the sensor supports IMU collection
# XBOOL XS_HasHardwareIMU(SENSORPID spid);
XS_HasHardwareIMU = libXSC.XS_HasHardwareIMU;
XS_HasHardwareIMU.argtypes = [ctypes.c_ulonglong]
XS_HasHardwareIMU.restype = ctypes.c_ubyte

# XS_SetEnableIMU
# allow the DLL to enable IMU hardware when present on an X4 sensor
# void XS_SetEnableIMU(XBOOL bEnable);
XS_SetEnableIMU = libXSC.XS_SetEnableIMU;
XS_SetEnableIMU.argtypes = [ctypes.c_ubyte]

# XS_GetEnableIMU
# returns true (non-zero) if IMU enable flag is set. (The flag maybe set regardless of actual IMU support.)
# XBOOL XS_GetEnableIMU();
XS_GetEnableIMU = libXSC.XS_GetEnableIMU
XS_GetEnableIMU.restype = ctypes.c_ubyte

